# Drogon-torch-serve

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.cpp-cpu-ubuntu  Dockerfile.cpp-gpu-ubuntu  LICENSE  README.md  config.json  docker-compose.yml  index.html  main.cc  opencv_custom_installer.sh  optimize_model_for_inference.py  requirements.txt
.devcontainer/: devcontainer.json
benchmark/: fastapi_upload.lua  upload.lua
benchmark/python_fastapi/: main.py  prod_serve.sh  requirements.txt  utils.py
cmake/: CPM.cmake  sanitizers.cmake
controllers/: HelloCtrl.cc  HelloCtrl.h  ImageClass.cc  ImageClass.h  StatusCtrl.cc  StatusCtrl.h
lib/: Configs.cpp  Configs.h  ModelBatchInference.cpp  ModelBatchInference.h  OnnxUtilities.cpp  OnnxUtilities.h  Utilities.hpp
model_resources/: class_names.json  resnet18_traced_cpu.pt
models/: model.json
src/: ModelBatchInference.cpp  ModelBatchInference.h  Utilities.cpp  Utilities.h
test/: CMakeLists.txt  test_main.cc
